force-app/main/default/objects/NCMT_Building_Parameter__c/NCMT_Building_Parameter__c.object-meta.xml
<CustomObject>
    <description>NCMT Building Parameters.</description>
    <label>Building Parameter</label>
    <nameField>
        <label>Building Parameter Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>