force-app/main/default/objects/NCMT_Building_Parameter__c/fields/ADP_high_density_PC_s_Bldg2_Percent__c.field-meta.xml
<CustomField>
    <fullName>ADP_high_density_PC_s_Bldg2_Percent__c</fullName>
    <description>ADP (high density PC’s) Building2 Percent</description>
    <label>ADP (high density PCs) Bldg2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>