force-app/main/default/objects/NCMT_Building_Parameter__c/fields/ADP_mainframe_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>ADP_mainframe_Building2_Percent__c</fullName>
    <description>ADP (mainframe) Building2 Percent</description>
    <label>ADP (mainframe) Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>