force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Atrium_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Atrium_Building2_Percent__c</fullName>
    <description>Atrium Building2 Percent</description>
    <label>Atrium Building2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>