force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Auditorium_sloped_floor_Bldg3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Auditorium_sloped_floor_Bldg3_Percent__c</fullName>
    <description>Auditorium (sloped floor) Building3 Percent</description>
    <label>Auditorium (sloped floor) Bldg3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>