force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Building_Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Parameter_Name__c</fullName>
    <description>Building Parameter Name</description>
    <inlineHelpText>Building Parameter Name</inlineHelpText>
    <label>Building Parameter Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Childcare Center</fullName>
            </value>
            <value>
                <fullName>Courthouse</fullName>
            </value>
            <value>
                <fullName>LPOE</fullName>
            </value>
            <value>
                <fullName>Laboratory: Dry</fullName>
            </value>
            <value>
                <fullName>Laboratory: Wet</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Parking Garage</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Medical Office</fullName>
            </value>
            <value>
                <fullName>Medical Clinic</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>