force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Child_care_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Child_care_Building2_Percent__c</fullName>
    <description>Child care Building2 Percent</description>
    <label>Child care Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>