force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Climate_controlled_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Climate_controlled_Building3_Percent__c</fullName>
    <description>Climate controlled Building3 Percent</description>
    <label>Climate controlled Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>