force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Clinics_health_units_Building1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Clinics_health_units_Building1_Percent__c</fullName>
    <description>Clinics/health units Building1 Percent</description>
    <label>Clinics/health units Building1 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>