force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Closed_offices_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Closed_offices_Building2_Percent__c</fullName>
    <description>Closed offices Building2 Percent</description>
    <label>Closed offices Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>