force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Courtroom_Bankruptcy_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_Bankruptcy_Building3_Percent__c</fullName>
    <description>Courtroom – Bankruptcy Building3 Percent</description>
    <label>Courtroom - Bankruptcy Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>