force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Courtroom_dist_Ceremonial_B3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_dist_Ceremonial_B3_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom - dist Ceremonial B3 Percent</description>
    <label>Courtroom - dist Ceremonial B3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>