force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Courtroom_dist_Standard_Bldg3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_dist_Standard_Bldg3_Percent__c</fullName>
    <description>Courtroom - dist Standard Building3 Perc</description>
    <label>Courtroom - dist Standard Bldg3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>