force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Data_Center_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Building2_Percent__c</fullName>
    <label>Data Center Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>