force-app/main/default/objects/NCMT_Building_Parameter__c/fields/EDRC_150_M__c.field-meta.xml
<CustomField>
    <fullName>EDRC_150_M__c</fullName>
    <description>EDRC $150 M</description>
    <inlineHelpText>EDRC $150 M</inlineHelpText>
    <label>EDRC $150 M</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>