force-app/main/default/objects/NCMT_Building_Parameter__c/fields/EDRC_GT_1000_M__c.field-meta.xml
<CustomField>
    <fullName>EDRC_GT_1000_M__c</fullName>
    <description>EDRC &gt; $1000 M</description>
    <inlineHelpText>EDRC &gt; $1000 M</inlineHelpText>
    <label>EDRC &gt; $1000 M</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>