force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Elevator_lobbies_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Elevator_lobbies_Building2_Percent__c</fullName>
    <description>Elevator lobbies Building2 Percent</description>
    <label>Elevator lobbies Building2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>