force-app/main/default/objects/NCMT_Building_Parameter__c/fields/EMIC_250_M__c.field-meta.xml
<CustomField>
    <fullName>EMIC_250_M__c</fullName>
    <description>EMIC $250 M</description>
    <inlineHelpText>EMIC $250 M</inlineHelpText>
    <label>EMIC $250 M</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>