force-app/main/default/objects/NCMT_Building_Parameter__c/fields/EMIC_50_M__c.field-meta.xml
<CustomField>
    <fullName>EMIC_50_M__c</fullName>
    <description>EMIC $50 M</description>
    <inlineHelpText>EMIC $50 M</inlineHelpText>
    <label>EMIC $50 M</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>