force-app/main/default/objects/NCMT_Building_Parameter__c/fields/EMIC_GT_1000_M__c.field-meta.xml
<CustomField>
    <fullName>EMIC_GT_1000_M__c</fullName>
    <description>EMIC &gt; $1000 M</description>
    <inlineHelpText>EMIC &gt; $1000 M</inlineHelpText>
    <label>EMIC &gt; $1000 M</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>