force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Enhanced_office_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_office_Building2_Percent__c</fullName>
    <description>Enhanced office Building2 Percent</description>
    <label>Enhanced office Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>