force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Firing_range_Building1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Firing_range_Building1_Percent__c</fullName>
    <description>Firing range Building1 Percent</description>
    <label>Firing range Building1 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>