force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Food_service_cafeteria_Bldg3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Food_service_cafeteria_Bldg3_Percent__c</fullName>
    <description>Food service (cafeteria) Building3 Percent</description>
    <label>Food service (cafeteria) Bldg3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>