force-app/main/default/objects/NCMT_Building_Parameter__c/fields/General_storage_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>General_storage_Building3_Percent__c</fullName>
    <description>General storage Building3 Percent</description>
    <label>General storage Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>