force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Ground_floor_circulation_Bldg2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Ground_floor_circulation_Bldg2_Percent__c</fullName>
    <description>Ground floor circulation Bldg2 Percent</description>
    <label>Ground floor circulation Bldg2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>