force-app/main/default/objects/NCMT_Building_Parameter__c/fields/GSF_GT500_000__c.field-meta.xml
<CustomField>
    <fullName>GSF_GT500_000__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GSF &gt; 500,000</description>
    <label>GSF &gt; 500,000</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>