force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Holding_cell_Central_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Holding_cell_Central_Building2_Percent__c</fullName>
    <description>Holding cell - Central Building2 Percent</description>
    <label>Holding cell - Central Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>