force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Holding_cell_Court_floors_Bldg3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Holding_cell_Court_floors_Bldg3_Percent__c</fullName>
    <description>Holding cell - Court floors Building3 Percen</description>
    <label>Holding cell- Court floors Bldg3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>