force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Joint_use_retail_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Joint_use_retail_Building3_Percent__c</fullName>
    <description>Joint-use, retail Building3 Percent</description>
    <label>Joint-use, retail Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>