force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Judicial_hearing_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Judicial_hearing_Building3_Percent__c</fullName>
    <description>Judicial hearing Building3 Percent</description>
    <label>Judicial hearing Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>