force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Laboratory_Dry_elec_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Dry_elec_Building3_Percent__c</fullName>
    <description>Laboratory (Dry/elec) Building3 Percent</description>
    <label>Laboratory (Dry/elec) Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>