force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Laboratory_Wet_chem_Building1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Wet_chem_Building1_Percent__c</fullName>
    <description>Laboratory (Wet/chem) Building1 Percent</description>
    <label>Laboratory (Wet/chem) Building1 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>