force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Libraries_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Libraries_Building2_Percent__c</fullName>
    <description>Libraries Building2 Percent</description>
    <label>Libraries Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>