force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Light_industrial_Building1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Light_industrial_Building1_Percent__c</fullName>
    <description>Light industrial Building1 Percent</description>
    <label>Light industrial Building1 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>