force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Loading_dock_Recycling_Trash_B2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Loading_dock_Recycling_Trash_B2_Percent__c</fullName>
    <description>Loading dock/Recycling/Trash Building2 Percent</description>
    <label>Loading dock/Recycling/Trash B2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>