force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Locker_Shower_room_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Locker_Shower_room_Building3_Percent__c</fullName>
    <description>Locker / Shower room Building3 Percent</description>
    <label>Locker / Shower room Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>