force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Main_Lobby_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Main_Lobby_Building2_Percent__c</fullName>
    <description>Main Lobby Building2 Percent</description>
    <label>Main Lobby Building2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>