force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Mechanical_Electrical_IT_Bldg2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Electrical_IT_Bldg2_Percent__c</fullName>
    <description>Mechanical/Electrical/IT Bldg2 Percent</description>
    <label>Mechanical/Electrical/IT Bldg2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>