force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Non_climate_controlled_Building3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Non_climate_controlled_Building3_Percent__c</fullName>
    <description>Non-climate controlled Building3 Percent</description>
    <label>Non-climate controlled Building3 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>