force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Other_circulation_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Other_circulation_Building2_Percent__c</fullName>
    <description>Other circulation Building2 Percent</description>
    <label>Other circulation Building2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>