force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Physical_fitness_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Physical_fitness_Building2_Percent__c</fullName>
    <description>Physical fitness Building2 Percent</description>
    <label>Physical fitness Building2 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>