force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Restrooms_Building2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Restrooms_Building2_Percent__c</fullName>
    <description>Restrooms Building2 Percent</description>
    <label>Restrooms Building2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>