force-app/main/default/objects/NCMT_Building_Parameter__c/fields/Sally_Port_Building1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sally_Port_Building1_Percent__c</fullName>
    <description>Sally Port Building1 Percent</description>
    <label>Sally Port Building1 Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>